fix: card caption and alignment

--- a/style.css
+++ b/style.css
@@ -90,13 +90,18 @@
     margin: 60px;
 }
 
-.card img {
+.card   {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+}
+.card img {
     width: 250px;
     height: 250px;
     object-fit: cover ;
     border: solid 8px #3882f6 ;
     border-radius: 20px;
+    margin-bottom: 8px;
 }
 
 .quotebox   {
